--- a/views/EditContact.ejs
+++ b/views/EditContact.ejs
@@ -22,15 +22,15 @@
                 <form method="POST" action="">
                     <div class='form-group'>
                         <input type="text" placeholder="Name" name="name" class='form-control m-1' 
-                        value="<%= sa.name %>"  />
+                        value="<%= data.name %>"  />
                     </div>
                     <div class='form-group'>
                         <input type="email" placeholder="Email" name="email" class='form-control m-1' 
-                        value="<%= sa.email %>"  />
+                        value="<%= data.email %>"  />
                     </div>
                     <div class='form-group'>
                         <input type="number" placeholder="Phone Number" name="number" class='form-control m-1'
-                        value="<%= sa.number %>"  />
+                        value="<%= data.pno %>"  />
                     </div>
                     <div class='form-group'>
                         <input type="submit" style="float:left" value="Update Student" class="m-1 btn btn-dark" />
